<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        app:labelVisibilityMode="labeled"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_news"
        app:labelVisibilityMode="labeled"
        android:icon="@drawable/ic_newspaper"
        android:title="@string/news" />


    <item
        android:id="@+id/navigation_coins"
        app:labelVisibilityMode="labeled"
        android:icon="@drawable/ic_earnings"
        android:title="@string/coins" />
    <item
        android:id="@+id/navigation_menu"
        app:labelVisibilityMode="labeled"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu" />

</menu>
