<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_default"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llMenuItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_margin_6x"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/MenuItem"
            android:tag="0"
            android:text="@string/my_account" />


        <TextView
            style="@style/MenuItem"
            android:tag="1"
            android:text="@string/my_favorites" />

        <TextView
            style="@style/MenuItem"
            android:tag="2"
            android:text="@string/exchange_office" />


    </LinearLayout>


</LinearLayout>